--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ RewriteEngine On
 # Enable URL rewriting
 
 # Map '/kultoura' to 'admin/admin-login.php'
-RewriteRule ^kultoura$ /admin/admin-login.php [L]
+# RewriteRule ^kultoura$ /admin/admin-login.php [L]
 
 # Redirect to '404.html' if the file or folder does not exist
 RewriteCond %{REQUEST_FILENAME} !-f
